k8s/networkpolicy/allow443.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openports
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: iss
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 9376
