k8s/networkpolicy/allowdnssandbox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowdnssandbox
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.204.196.10/32
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  podSelector: {}
  policyTypes:
  - Egress
