k8s/networkpolicy/allowto.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openports
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: iss
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 9376
