k8s/networkpolicy/calicoglobal.yml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-tcp-443
spec:
  types:
  - Egress
  egress:
  - action: Allow
